<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/settings_bg"
    android:orientation="vertical" >

    <include layout="@layout/i_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/labelPhoneNumber"
                style="@style/LabelTextLarge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                style="@style/LabelTextSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneVerificationViaSms" />

            <TextView
                android:id="@+id/labelPhoneVerificationEnter"
                style="@style/LabelTextSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/txtVerificationNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="4" />

                <Button
                    android:id="@+id/buttonVeriNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registorButtonText" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelResendVerificationNumber"
                style="@style/LabelTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phoneVerificationSmsNotReceived" />

            <Button
                android:id="@+id/buttonOption"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/Option" />

            <TextView
                android:id="@+id/changeNumber"
                style="@style/LabelTextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:gravity="center"
                android:text="@string/changeNumber"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>