<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/settings_bg"
    android:orientation="vertical" >

    <include layout="@layout/i_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    style="@style/LabelTextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:paddingTop="4.0dip"
                    android:shadowColor="#fff6f6f6"
                    android:text="@string/displayNameLabel"
                    android:textColor="#ff4e5466"
                    android:textSize="14.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelCharCount"
                    style="@style/LabelTextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:paddingLeft="3dp"
                    android:paddingTop="4.0dip"
                    android:shadowColor="#fff6f6f6"
                    android:text="@string/displayNameCharCountLabel"
                    android:textColor="#ff4e5466"
                    android:textSize="14.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/textDisplayName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:paddingLeft="3dp" >
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/buttonReg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/displayNameButtonText" />
            </LinearLayout>

            <TextView
                style="@style/LabelTextMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:paddingTop="4.0dip"
                android:shadowColor="#fff6f6f6"
                android:text="@string/displayNameSuggessionText"
                android:textColor="#ff4e5466"
                android:textSize="14.0sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>